--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "React + Redux - User Registration and Login Tutorial & Example",
   "main": "index.js",
   "scripts": {
-    "start": "node backend/src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cd frontend && npm start",
+    "start:client": "cd frontend && npm start",
+    "start:server": "node backend/src"
   },
   "repository": {
     "type": "git",
